# IntelliCLI

./: .dockerignore  .gitignore  DOCKER_QUICKSTART.md  DOCKER_SUMMARY.md  Dockerfile  LICENSE  Makefile  README.md  README_EN.md  config.yaml.template  docker-compose.yml  docker-deploy.sh  env.example  install.bat  install.sh  main.py  pyproject.toml  requirements.txt
docker/: README.md
docs/: MCP_GUIDE.md  MCP_GUIDE_EN.md  复盘功能使用指南.md  快速安装指南.md  配置系统说明.md
intellicli/: __init__.py  cli.py
intellicli/agent/: __init__.py  agent.py  executor.py  model_router.py  planner.py  task_reviewer.py
intellicli/config/: __init__.py  model_config.py  search_config.py
intellicli/mcp/: __init__.py  mcp_client.py  mcp_tool_manager.py
intellicli/models/: __init__.py  base_llm.py  claude_client.py  deepseek_client.py  gemini_client.py  multimodal_manager.py  ollama_client.py  openai_client.py
intellicli/tools/: __init__.py  code_analyzer.py  content_integrator.py  document_manager.py  file_system.py  git_operations.py  image_processor.py  python_analyzer.py  shell.py  system_operations.py  web_search.py
intellicli/ui/: __init__.py  display.py
scripts/: install.py
